@@ -4,11 +4,12 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
+import org.springframework.test.context.ActiveProfiles;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
+@ActiveProfiles("openapi-export")
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 public class OpenApiExportTest {
     @Autowired
@@ -17,6 +18,6 @@ public class OpenApiExportTest {
     @Test
     void exportOpenApi() throws Exception {
         String spec = restTemplate.getForObject("/v3/api-docs", String.class);
-        Files.write(Paths.get("openapi.yaml"), spec.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(Paths.get("openapi.yaml"), spec);
     }
 }
